<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>

    <string name="order_name">JustJava order for <xliff:g id="name" example="Tommy">%s</xliff:g></string>
    <string name="is_order_summary">Name: <xliff:g id="name" example="Tommy">%s</xliff:g></string>
    <string name="add_whipped_cream">Add whipped cream?</string>
    <string name="add_chocolate">Add chocolate?</string>
    <string name="is_quantity">Quantity:</string>
    <string name="total">Total: $</string>
    <string name="thank_you">Thank You!</string>

    <string name="name">Name</string>
    <string name="toppings">toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order summary</string>
    <string name="order">Order</string>
</resources>
